# radar_wrangler

./: .pre-commit-config.yaml  LICENSE  README.md
code/: README_download.md  README_index.md  bedmap_labels.py  create_index_layer.py  detangle_bedmap.py  download_awi.py  download_awi_pangaea.py  download_bas.py  download_bedmap.py  download_cresis_ku.py  download_utig_aad_oia.py  download_utig_nsidc.py  download_utig_tdr.py  extract_icethk_tracks.py  extract_radargram_tracks.py  generate_cresis_ku_index.py  generate_utig_nsidc_index.py  populate_campaigns.py  populate_granules.py  pyproject.toml  radar_index_utils.py  rearrange_utig.py  style_geopackage_index.py
code/data_exploration/: attribute_bedmap1.ipynb  bas.ipynb  detangle_bedmap_bas.ipynb  detangle_bedmap_spri.ipynb  detangle_bedmap_utig.ipynb  detangle_bedmap_utils.py  download_awi.ipynb  download_cresis.ipynb  manual_spri_labels.pkl  plot_bas_delores_segy.ipynb  plot_bas_respac.ipynb  plot_cresis_mat.ipynb  plot_cresis_netcdf.ipynb  plot_lvs_segy.ipynb  plot_utig.ipynb
code/download/: README.md  download_all_bas.py  download_all_bedmap.py  download_awi.py  download_awi_pangaea.py  download_bas.py  download_bedmap.py  download_cresis_ku.py  download_cresis_nsidc.py  download_ldeo_agap_gambit.sh  download_utig_aad_oia.py  download_utig_nsidc.py  download_utig_tdr.py  generate_cresis_ku_index.py  generate_cresis_nsidc_index.py  generate_utig_nsidc_index.py  initialize_gpkg.py  rearrange_utig.py
code/index/: README.md  bedmap_labels.py  create_geopackage_index.py  create_index_layer.py  detangle_bedmap.py  (+15 more)
(+41 files in other folders)
