[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas>=1.0.1",
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pyproj>=3.6.1",
    "pyyaml>=6.0.2",
    "rdp>=0.8",
    "scipy>=1.13.1",
]
